--- a/vignettes/nmecr.Rmd
+++ b/vignettes/nmecr.Rmd
@@ -1,5 +1,11 @@
 ---
 title: "Introduction to nmecr"
+author: 
+  - Mrinalini Sharma^[msharma@kw-engineering.com]
+  - David Jump^[djump@kw-engineering.com]
+  - Devan Johnson^[johnson@kw-engineering.com]
+
+date: "October 1, 2019"
 output: pdf_document
 vignette: >
   %\VignetteIndexEntry{Introduction to nmecr}
@@ -20,9 +26,19 @@ library(ggplot2)
 library(tidyr)
 ```
 
-NMEC, or Normalized Metered Energy Consumption, enables energy efficiency program stakeholders to determine energy and cost savings after measures are installed, based on the analysis of pre- and post-installation meter data. Traditionally applied with billing data, this approach has been updated with advanced modeling methods applied to high frequency data, enabling a granular savings analysis. 
+The `nmecr` package was written to integrate the past efforts of the energy efficiency industry to streamline meter-based Measurement & Verification of EE projects. It brings together simple linear regression with outside air temperature , the change point models (from ASHARE 1040-RP), and the Time-of-Week and Temperature model (developed by the Lawrence Berkeley National Laboratory) and builds enhancements upon these by accurately predicting the energy use profiles of facilities with multiple operating modes.  
 
-The nmecr package streamlines the application of the NMEC approach by enabling the:
+#### Normalized Metered Energy Consumption (NMEC)
+
+Meter-based energy efficiency programs are proliferating across the globe. This proliferation is influenced by the widespread availability of high frequency energy use measurements from new metering technology as well as advancements in statistical regression and other empirical energy data modeling methodologies. Program administrators may report savings as the overall reduction in normalized metered energy consumption (NMEC). This method to determine savings is based on analysis of meter data collected prior to and after energy efficiency and conservation measures have been installed. Referred to as advanced measurement and verification (M&V) by the industry, this time-granular data and updated modeling methods provide several advantages over other methods used to quantify the benefits of energy efficiency:
+
+* It reliably determines the actual savings achieved at the meter
+
+*	It provides fast feedback on the facility's energy performance and savings progress
+
+*	It enables identification and troubleshooting of issues that prevent savings realization
+ 
+The `nmecr` package streamlines the application of the NMEC approach by enabling the:
 
 * Management of high frequency, high volume data.
 
@@ -34,9 +50,9 @@ The nmecr package streamlines the application of the NMEC approach by enabling t
 
 ## Data
 
-'nmecr' includes two datasets: 'temp' and 'eload'. These contain two years (03/01/2012 - 03/01/2014) of outside air temperature data and energy use data from a commercial facility in North America. We will use the first year as the pre-implementation dataset and the second year as the post-implementation dataset.
+`nmecr` includes two datasets: `temp` and `eload`. These contain two years (03/01/2012 - 02/28/2015) of outside air temperature data and energy use data from a commercial building in North America. Energy conservation measures were installed between 03/01/2013 and 02/28/2014 in this building and so, we will use the first year (03/01/2012 - 02/01/2013) as the pre-implementation dataset and the third year (03/01/2014 - 02/28/2015) as the post-implementation dataset.
 
-'temp' and 'eload' are data frames with the two variables each. When using nmecr functions, ensure that the column headers of your datasets are the same as those shown below.
+`temp` and `eload` are data frames with the two variables each. When using `nmecr` functions, ensure that the column headers of your datasets are the same as those shown below.
 
 
 ```{r temp, results='markup', echo=FALSE}
@@ -61,9 +77,9 @@ These functions perform two tasks:
 
 1. Aggregating data from small time intervals to large time intervals.   
 
-1. Combining eload and temp datasets into one data frame. 
+1. Combining `eload` and `temp` datasets into one data frame. 
 
-Note that the temp and eload do not need to necessarily have the same time interval. For example, you can input 15-min electric consumption data and hourly temperature data to `agg_eload_temp_df_to_daily()` to generate aggregated electric consumption and temperature data at the daily level.
+Note that the `temp` and `eload` do not need to necessarily have the same time interval. For example, you can input 15-min electric consumption data and hourly temperature data to `agg_eload_temp_df_to_daily()` to generate aggregated electric consumption and temperature data at the daily level. In fact, data can be made available in any of the following time intervals and aggregated to hourly, daily, and/or monthly intervals as needed: less than 15-minutes, 15-minutes, hourly, daily, and monthly time intervals.
 
 ```{r daily_energy_use, results='markup'}
 daily_energy_use <- agg_eload_temp_df_to_daily(eload_data = eload, temp_data = temp,
@@ -77,19 +93,19 @@ head(daily_energy_use, n = 5)
 
 ## Separating pre-implementation and post-implementation datasets
 
-Once the eload and temp datasets are combined into one data frame, the next step is to create the pre- and post-implementation data frames. You can choose any method to do so. We recommend using the dplyr and the lubridate package.
+Once the `eload` and `temp` datasets are combined into one data frame, the next step is to create the pre- and post-implementation data frames. You can choose any method to do so. We recommend using the dplyr and the lubridate package.
 
 ```{r daily_pre, results='hide'}
 daily_pre <- daily_energy_use %>%
   filter(time < lubridate::mdy("3/1/2013"))
 
 daily_post <- daily_energy_use %>%
-  filter(time > lubridate::mdy("2/28/2013"))
+  filter(time > lubridate::mdy("2/28/2014"))
 ```
 
 ## Data Modeling
 
-nmecr contains four data modeling algorithms. These create the data models, report on the models' goodness-of-fit metrics, provide details on the model residuals' skewness and kurtosis, and predict using the developed model when given a prediction dataset. 
+`nmecr` contains four data modeling algorithms. These create the data models, report on the models' goodness-of-fit metrics, provide details on the model residuals' skewness and kurtosis, and predict using the developed model when given a prediction dataset. 
 
 * `model_with_TOWT()`: Time-of-Week & Temperature and Time-Only algorithms
 
@@ -103,7 +119,7 @@ nmecr contains four data modeling algorithms. These create the data models, repo
 
 ### Modeling with Time of Week and Temperature
 
-Simple Linear Regression and its derivatives (changepoint models and HDD/CDD models) are the most popular data modeling algorithms in the energy efficiency community. The Time-of-Week and Temperature model, developed by Lawrence Berkeley National Laboratory, has improved upon the predictive capabilties of these algorithms by adding an additional variable to regress upon: Time-of-Week. While primitive implementations of TOWT required the occupancy schedule of the facility to be an input to the algorithm, the implementation below gleans this information from the energy use profile itself. As a result, the only independent variable input required by the algorithm is temperature, which is made available in the daily_pre and the daily_post data frames already. 
+Simple Linear Regression and its derivatives (changepoint models and HDD/CDD models) are the most popular data modeling algorithms in the energy efficiency community. The Time-of-Week and Temperature (TOWT) model, developed by Lawrence Berkeley National Laboratory, has improved upon the predictive capabilties of these algorithms by adding an additional variable as a regressor: Time-of-Week. While early implementations of TOWT required the occupancy schedule of the facility to be an input to the algorithm, the implementation below gleans this information from the energy use profile itself. As a result, the only independent variable input required by the algorithm is temperature, which is made available in the daily_pre and the daily_post data frames already. 
 
 ```{r TOWT}
 TOWT_results <- model_with_TOWT(training_data = daily_pre, data_interval = "Daily", 
@@ -154,7 +170,10 @@ ggplot2::ggplot(df, aes(resi)) +
 TOWT_results$normality_metrics[, c(2,4)]
 ```
 
-The California Public Utility Commission requires savings uncertainty for 10% savings at the 90% confidence level to be reported to qualify a model as 'good' and fit for use in energy efficieny programs. This information can be obtained using the `calculate_savings_uncertainty()` function:
+The California Public Utilities Commission requires savings to be detectable above model variations. `nmecr` interprets this using ASHRAE Guideline 14 - 2014's formulation for savings uncertainty, which relates the savings uncertainty to the model goodness of fit metric CV(RMSE), the confidence level, the amount of savings, the amount of data used to develop the model, and the amount of data required to report savings. It includes a correction when autocorrelation is present (which occurs mainly in models developed from daily and hourly data). LBNL has shown this uncertainty formulation with correction for autocorrelation underestimates the savings uncertainty. More work on this issue is needed. Until a better formulation is available, `nmecr` uses ASHRAE's method only as an estimation. 
+
+`nmecr` enables the user to specify the level of savings expected, then estimates the savings uncertainty based on a few different confidence levels (68%, 90%, 95%, and 99.7%), the model's CV(RMSE), and the number of data points in the post-installation dataset. If a post-implementation dataset is not available, it assumes the count of post-implementation datapoints to be the same as the baseline dataset.  As uncertainties are stated as the savings estimate 'plus or minus' the savings uncertainty, savings are considered detectable when the saving uncertainty is 50% or less. This information can be obtained using the `calculate_savings_uncertainty()` function:
+
 
 ```{r savings_unc @ 10, results='markup'}
 savings_uncertainty_10 <- calculate_savings_uncertainty(modeled_data_obj = TOWT_results, 
@@ -196,6 +215,8 @@ The predictions can further be summarized to calculate 'Avoided Energy Use' for 
 
 ### Avoided Energy Use and Savings Uncertainty
 
+Avoided energy use is the savings achieved in the post-installation period. It is calculated from the difference in the adjusted baseline energy use and the post-installation period measured energy use. The adjusted baseline energy use is determined from the baseline model's predictions after inputting the post-installation period temperature and time data.
+
 ```{r avoided energy use, results='markup'}
 
 avoided_energy_use <- calculate_avoided_energy_use(modeled_data_obj = TOWT_predictions)
@@ -206,6 +227,8 @@ avoided_energy_use$savings_summary
 
 ```
 
+Actual savings uncertainties for the avoided energy use are estimated using the same function as before, but using the actual number of points in the post-installation period. 
+
 ```{r actual savings uncertainty, results='markup'}
 
 actual_savings_uncertainty <- calculate_savings_uncertainty(modeled_data_obj = 
@@ -214,7 +237,7 @@ actual_savings_uncertainty <- calculate_savings_uncertainty(modeled_data_obj =
                                                             avoided_energy_use$pct_savings)
 ```  
 ```{r actual savings uncertainty 90, results='markup', echo = FALSE}
-actual_savings_uncertainty$uncertainty_summary[2, c(2,3)]
+actual_savings_uncertainty$uncertainty_summary[2, 2]
 
 ```
 
@@ -234,4 +257,4 @@ ggplot2::ggplot(cumulative_savings_df, aes(x = time, y = cusum_savings)) +
 
 ### Normalized Savings
 
-Normalized Savings for an energy efficiency project can be calculated using the functions described above by assigning a normalized temperature dataset as the prediction dataset. Remember to name the dataframe columns as: 'time' and 'temp'.  
+Normalized Savings for an energy efficiency project can be calculated using the functions described above by assigning a normalized temperature dataset as the prediction dataset. Remember to name the dataframe columns as: `time` and `temp`.  
